--- a/TO DO WEB/styles.css
+++ b/TO DO WEB/styles.css
@@ -1,233 +1,133 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
-body {
+::selection{
+  color: rgba(255, 255, 255, 0.5);
+  background: rgb(89, 4, 199);
+}
+body{
   width: 100%;
   height: 100vh;
-  overflow: hidden;
-  background: linear-gradient(135deg, #3dced3, #3dced3);
+  /* overflow: hidden; */
+  padding: 10px;
+  background-color: rgb(162, 139, 107);
+  
 }
-::-moz-selection {
-  color: #fff;
-  background: #040a0a;
-}
-::selection {
-  color: #fff;
-  background: #010f0f;
-}
-.wrapper {
-  max-width: 405px;
-  padding: 28px 0 30px;
-  margin: 137px auto;
-  background: #fff;
-  border-radius: 7px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-}
-.task-input {
-  height: 52px;
-  padding: 0 25px;
-  position: relative;
-}
-.task-input img {
-  top: 50%;
-  position: absolute;
-  transform: translate(17px, -50%);
-}
-.task-input input {
-  height: 100%;
+.wrapper{
+  background: rgba(35, 48, 51, 0.414);
+  max-width: 400px;
   width: 100%;
-  outline: none;
-  font-size: 18px;
+  margin: 120px auto;
+  padding: 25px;
   border-radius: 5px;
-  padding: 0 20px 0 53px;
-  border: 1px solid #999;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 }
-.task-input input:focus,
-.task-input input.active {
-  padding-left: 52px;
-  border: 2px solid #050e0c;
+.wrapper header{
+  font-size: 30px;
+  font-weight: 600;
 }
-.task-input input::-webkit-input-placeholder {
-  color: #25aac5;
-}
-.task-input input::-moz-placeholder {
-  color: #af6060;
-}
-.task-input input:-ms-input-placeholder {
-  color: #3c9fb1;
-}
-.task-input input::-ms-input-placeholder {
-  color: #af5699;
-}
-.task-input input::placeholder {
-  color: #bfbfbf;
-}
-.controls,
-li {
+.wrapper .inputField{
+  margin: 20px 0;
+  width: 100%;
   display: flex;
+  height: 45px;
+}
+.inputField input{
+  width: 85%;
+  height: 100%;
+  outline: none;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  font-size: 17px;
+  padding-left: 15px;
+  transition: all 0.3s ease;
+}
+.inputField input:focus{
+  border-color: #2b065a;
+}
+.inputField button{
+  width: 50px;
+  height: 100%;
+  border: none;
+  color: #fff;
+  margin-left: 5px;
+  font-size: 21px;
+  outline: none;
+  background: #2d075e;
+  cursor: pointer;
+  border-radius: 3px;
+  opacity: 0.6;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.inputField button:hover,
+.footer button:hover{
+  background: #120424;
+}
+.inputField button.active{
+  opacity: 1;
+  pointer-events: auto;
+}
+.wrapper .todoList{
+  max-height: 250px;
+  overflow-y: auto;
+}
+.todoList li{
+  position: relative;
+  list-style: none;
+  margin-bottom: 8px;
+  background: #dbeda7;
+  border-radius: 3px;
+  padding: 10px 15px;
+  cursor: default;
+  overflow: hidden;
+  word-wrap: break-word;
+}
+.todoList li .icon{
+  position: absolute;
+  right: -45px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #e74c3c;
+  width: 45px;
+  text-align: center;
+  color: rgb(161, 194, 229);
+  padding: 10px 15px;
+  border-radius: 0 3px 3px 0;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.todoList li:hover .icon{
+  right: 0px;
+}
+.wrapper .footer{
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
   align-items: center;
   justify-content: space-between;
 }
-.controls {
-  padding: 18px 25px;
-  border-bottom: 1px solid #ccc;
-}
-.filters span {
-  margin: 0 8px;
-  font-size: 17px;
-  color: #444444;
-  cursor: pointer;
-}
-.filters span:first-child {
-  margin-left: 0;
-}
-.filters span.active {
-  color: #21c5c5;
-}
-.controls .clear-btn {
+.footer button{
+  padding: 6px 10px;
+  border-radius: 3px;
   border: none;
-  opacity: 0.6;
   outline: none;
-  color: #fff;
-  cursor: pointer;
-  font-size: 13px;
-  padding: 7px 13px;
-  border-radius: 4px;
-  letter-spacing: 0.3px;
-  pointer-events: none;
-  transition: transform 0.25s ease;
-  background: linear-gradient(135deg, #1a374d 0%, #406882 100%);
-}
-.clear-btn.active {
-  opacity: 0.9;
-  pointer-events: auto;
-}
-.clear-btn:active {
-  transform: scale(0.93);
-}
-.task-box {
-  margin-top: 20px;
-  margin-right: 5px;
-  padding: 0 20px 10px 25px;
-}
-.task-box.overflow {
-  overflow-y: auto;
-  max-height: 300px;
-}
-.task-box::-webkit-scrollbar {
-  width: 5px;
-}
-.task-box::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 25px;
-}
-.task-box::-webkit-scrollbar-thumb {
-  background: #e6e6e6;
-  border-radius: 25px;
-}
-.task-box .task {
-  list-style: none;
-  font-size: 17px;
-  margin-bottom: 18px;
-  padding-bottom: 16px;
-  align-items: flex-start;
-  border-bottom: 1px solid rgb(118, 183, 192);
-}
-.task-box .task:last-child {
-  margin-bottom: 0;
-  border-bottom: 0;
-  padding-bottom: 0;
-}
-.task-box .task label {
-  display: flex;
-  align-items: flex-start;
-}
-.task label input {
-  margin-top: 7px;
-  accent-color: #010408;
-}
-.task label p {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  margin-left: 12px;
-  word-wrap: break-word;
-}
-.task label p.checked {
-  text-decoration: line-through;
-}
-.task-box .settings {
-  position: relative;
-}
-.settings :where(i, li) {
-  cursor: pointer;
-}
-.settings .task-menu {
-  z-index: 10;
-  right: -5px;
-  bottom: -65px;
-  padding: 5px 0;
-  background: #fff;
-  position: absolute;
-  border-radius: 4px;
-  transform: scale(0);
-  transform-origin: top right;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
-  transition: transform 0.2s ease;
-}
-.task-box .task:last-child .task-menu {
-  bottom: 0;
-  transform-origin: bottom right;
-}
-.task-box .task:first-child .task-menu {
-  bottom: -65px;
-  transform-origin: top right;
-}
-.task-menu.show {
-  transform: scale;
-}
-.task-menu li {
-  height: 25px;
+  color: rgba(255, 255, 255, 0.923);
+  font-weight: 400;
   font-size: 16px;
-  margin-bottom: 2px;
-  padding: 17px 15px;
+  margin-left: 5px;
+  background: #0f0320;
   cursor: pointer;
-  justify-content: flex-start;
+  user-select: none;
+  opacity: 0.6;
+  pointer-events: none;
+  transition: all 0.3s ease;
 }
-.task-menu li:last-child {
-  margin-bottom: 0;
-}
-.settings li:hover {
-  background: #f5f5f5;
-}
-.settings li i {
-  padding-right: 8px;
-}
-
-body {
-  padding: 0 10px;
-}
-.wrapper {
-  padding: 20px 0;
-}
-.filters span {
-  margin: 0 5px;
-}
-.task-input {
-  padding: 0 20px;
-}
-.controls {
-  padding: 18px 20px;
-}
-.task-box {
-  margin-top: 20px;
-  margin-right: 5px;
-  padding: 0 15px 10px 20px;
-}
-.task label input {
-  margin-top: 4 xdpx;
+.footer button.active{
+  opacity: 1;
+  pointer-events: auto;
 }
