--- a/TO DO WEB/styles.css
+++ b/TO DO WEB/styles.css
@@ -14,7 +14,7 @@ body{
   height: 100vh;
   /* overflow: hidden; */
   padding: 10px;
-  background-color: rgb(162, 139, 107);
+  background-color: rgb(147, 229, 212);
   
 }
 .wrapper{
@@ -57,7 +57,7 @@ body{
   margin-left: 5px;
   font-size: 21px;
   outline: none;
-  background: #2d075e;
+  background: #e219b7;
   cursor: pointer;
   border-radius: 3px;
   opacity: 0.6;
@@ -120,7 +120,7 @@ body{
   font-weight: 400;
   font-size: 16px;
   margin-left: 5px;
-  background: #0f0320;
+  background: #93d682;
   cursor: pointer;
   user-select: none;
   opacity: 0.6;
